--- a/streamee-backend/.env
+++ b/streamee-backend/.env
@@ -1,7 +1,7 @@
 PORT=5000
 
-MONGO_URI=mongodb+srv://Devilman09:Laxman%40zephyr0918@streamee.gpwxcfb.mongodb.net/?retryWrites=true&w=majority&appName=Streamee
+MONGO_URI=mongodb+srv://Devilman09:streamee.gpwxcfb.mongodb.net/?retryWrites=true&w=majority&appName=Streamee
 
-CLOUDINARY_CLOUD_NAME=dek4qzrjz
-CLOUDINARY_API_KEY=714621752915663
-CLOUDINARY_API_SECRET=B7Wl0evfGwzwoU66TlLMDN0NMwo
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
